# meowlog

./: Cargo.toml  README.md  drug_schema.json  flake.nix  meowlog.proto  substances.json
client/: Cargo.toml
client/src/: config.rs  ingestions.rs  ingestions_util.rs  main.rs  substance_util.rs  substances.rs
client/src/drugs_parser/: mod.rs  parser.rs
server/: Cargo.toml
server/src/: main.rs
src/: config.rs  ingestions.rs  ingestions_util.rs  main.rs  substances.rs  util.rs
