[package]
name = "meowlog"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
git2 = "0.19.0"
inquire = "0.7.5"
lazy_static = "1.5.0"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
