[package]
name = "meowlog"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
aes = "0.6.0"
crc = "3.2.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
clap_complete_nushell = "4.5.4"
color-eyre = "0.6.3"
inquire = "0.7.5"
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[build-dependencies]
